--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "daraz-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Muddabirchohan/react-daraz-ui",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -22,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
